tests/snapshots/regression/recovery__type_annotation_recovery.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/type_annotation_recovery.flx
exit_code: 1

[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 3 errors • tests/fixtures/recovery/type_annotation_recovery.flx
error[E034]: Unexpected Token

I was expecting a type here, but I found `=`.

  tests/fixtures/recovery/type_annotation_recovery.flx:1:8
  |
1 | let x: = 1
  |        ^


error[E034]: Unexpected Token

I was expecting a type here, but I found `{`.

  tests/fixtures/recovery/type_annotation_recovery.flx:9:11
  |
9 | fn g() -> {
  |           ^

Note:
  while parsing function `g`


error[E034]: Unexpected Token

I was expecting a type here, but I found `->`.

  tests/fixtures/recovery/type_annotation_recovery.flx:14:15
   |
14 | let lam = /x: -> x
   |               ^^

Note:
  while parsing lambda expression
  Suppressed 1 cascading parser diagnostic(s) likely caused by an earlier syntax error.

Found 3 errors.
